[project]
name = "agentflow"
version = "0.1.0"
description = "A flexible LLM agent platform supporting multiple inference patterns and tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.11.*"
authors = [
    { name = "AgentFlow Team" }
]
keywords = ["llm", "agent", "ai", "openai", "vllm", "react"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
# Full dependencies including browser automation and vector DB
full = [
    "playwright>=1.40.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "numpy>=1.24.0",
]
# Vector database support (requires compatible Python version)
vector = [
    "chromadb>=0.4.0",
]
vllm = [
    "vllm>=0.2.0",
]

[project.scripts]
agentflow = "agentflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentflow"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/agentflow --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
